--- a/src/user/package.json
+++ b/src/user/package.json
@@ -8,8 +8,9 @@
     "dev": "nodemon index.ts"
   },
   "dependencies": {
-    "@lxdgc9/pkg": "^1.0.2",
+    "@lxdgc9/pkg": "^1.0.5",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.1",
