--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,11 @@
 events {
-    worker_connections 1024;
+  worker_connections 1024;
 }
 
 
 http {
+  client_max_body_size 1024M;
+
   upstream swagger {
     server swagger:8080;
   }
