--- a/src/user/package.json
+++ b/src/user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "role-srv",
+  "name": "user-srv",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -8,7 +8,7 @@
     "dev": "nodemon index.ts"
   },
   "dependencies": {
-    "@lxdgc9/pkg": "^1.0.11",
+    "@lxdgc9/pkg": "^1.0.12",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "express": "^4.18.2",
