--- a/src/user/package.json
+++ b/src/user/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.ts"
   },
   "dependencies": {
-    "@lxdgc9/pkg": "^1.0.19",
+    "@lxdgc9/pkg": "^1.0.20",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -16,6 +16,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.5",
+    "multer": "^1.4.5-lts.1",
     "node-nats-streaming": "^0.3.2",
     "redis": "^4.6.6"
   },
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.16.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
