--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,9 @@ http {
   upstream log {
     server log:3000;
   }
+  upstream landing {
+    server landing:3000;
+  }
 
 server {
   listen 80;
@@ -43,6 +46,9 @@ server {
     }
     location /api/logs {
       proxy_pass http://log;
+    }
+    location /api/landing {
+      proxy_pass http://landing;
     }
   }
 }
