--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -131,6 +131,21 @@ services:
       - bridge
     depends_on:
       - nats
+  landing:
+    image: sys/landing
+    build:
+      context: ./src/landing
+    ports:
+      - 3003:3000
+    env_file:
+      - .env
+    environment:
+      - NODE_ENV=dev
+      - MONGO_URI=${MONGO_URI_LANDING_SRV}
+    volumes:
+      - ./src/landing:/usr/app:rw
+    networks:
+      - bridge
 
 secrets:
   npmrc:
