--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,15 +22,19 @@ http {
     server landing:3000;
   }
 
-server {
-  listen 80;
-  server_name localhost;
+  server {
+    listen 80;
+    server_name localhost;
+
+    listen 443 ssl;
+    ssl_certificate /home/ssl/iit.crt;
+    ssl_certificate_key /home/ssl/private.key;
 
     location / {
       rewrite ^/$ /docs permanent;
     }
 
-  location /docs {
+    location /docs {
       add_header Access-Control-Allow-Origin *;
       add_header Access-Control-Allow-Methods "POST, GET, PATCH, DELETE, PUT, OPTIONS";
       add_header Access-Control-Allow-Headers "Origin, Authorization, Accept";
