change server name nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
 
   server {
     listen 80;
-    server_name localhost;
+    server_name hldt.iit.vn;
 
     listen 443 ssl;
     ssl_certificate /home/ssl/Chain_RootCA_Bundle.crt;
