--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
     server_name hldt.iit.vn;
 
     listen 443 ssl;
-    ssl_certificate /home/ssl/Chain_RootCA_Bundle.crt;
+    ssl_certificate /home/ssl/iit.crt;
     ssl_certificate_key /home/ssl/private.key;
 
     location / {
