--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
 
   server {
     listen 80;
-    server_name hldt.iit.vn;
+    server_name api.iit.vn;
 
     listen 443 ssl;
     ssl_certificate /home/ssl/iit.crt;
