--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,12 +32,9 @@ http {
     ssl_certificate /home/ssl/iit.crt;
     ssl_certificate_key /home/ssl/private.key;
 
-    root /var/www/domain/html;
-    index index.html index.htm index.nginx-debian.html;
-
 
     location / {
-      try_files $uri $uri/ =404;
+      rewrite ^/$ /docs permanent;
     }
 
     location /docs {
