--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,6 @@ events {
   worker_connections 1024;
 }
 
-
 http {
   client_max_body_size 1024M;
 
@@ -26,10 +25,15 @@ http {
     listen 80;
     server_name api.iit.vn;
 
+    return 301 https://$host$request_uri;
+  }
+
+  server {
+    server_name api.iit.vn;
+
     listen 443 ssl;
     ssl_certificate /home/ssl/iit.crt;
     ssl_certificate_key /home/ssl/private.key;
-
 
     location / {
       rewrite ^/$ /docs permanent;
