--- a/src/gateway/package.json
+++ b/src/gateway/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.0.5",
+    "@nestjs/websockets": "^10.0.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "nats": "^2.15.1",
